# bdg-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.agents/skills/bdg/: SKILL.md
.github/workflows/: rust.yaml
src/: app.rs  badges.rs  cli.rs  config.rs  core.rs  lib.rs  main.rs  manifest.rs  providers.rs  readme.rs  readme_badges.rs  readme_remove.rs  tui.rs  version.rs  workflows.rs
tests/: cli_behavior.rs  config_discovery.rs  manifest_parsing.rs  readme_badges.rs  readme_rewrite.rs  remove_by_id_kind.rs  skills_command.rs  version_classification.rs  workflow_detection.rs
tests/fixtures/: Cargo.toml  moon.mod.json  package.json
tests/fixtures/nested/: package.json
