[package]
name = "bdg"
version = "2026.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diffy = "0.3"
crossterm = "0.28"
ratatui = "0.26"
semver = "1.0"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.24"
