[package]
name = "bdg"
version = "2026.6.0"
edition = "2024"
description = "Interactive badge manager CLI for README files"
license = "Apache-2.0"
repository = "https://github.com/f4ah6o/bdg-rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diffy = "0.3"
crossterm = "0.27"
ratatui = "0.26"
semver = "1.0"
toml = "0.8"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.24"
